UX: fix avatar wrapping issue (#3)

--- a/common/common.scss
+++ b/common/common.scss
@@ -1,10 +1,6 @@
 @use "lib/viewport";
 
 .discourse-custom-ad-component {
-  td {
-    width: 100%;
-  }
-
   a {
     box-sizing: border-box;
     display: flex;
